2008-01-21  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/GuiDispatchServerSink.cs, libsteticui/WidgetDesigner.cs,
	  libsteticui/Project.cs: Made events fired by the designer synchronous.
	  Fixes some criticals caused by events being fired in the wrong order.
	* libstetic/wrapper/Frame.cs, libstetic/wrapper/CheckButton.cs,
	  libstetic/wrapper/Container.cs, libstetic/wrapper/ScrolledWindow.cs: Fix
	  some gtk warnings and criticals.

2008-01-16  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetDesigner.cs: Fix typo.

2008-01-15  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/ComboBox.cs: Fix bug #324925 - Glade import: Text combos
	  not correctly imported.

2008-01-14  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/editor/Boolean.cs: Improve rendering of checkbox.

2008-01-11  Marek Safar <marek.safar@gmail.com> 

	* libstetic/editor/ActionMenu.cs, libstetic/editor/ActionMenuBar.cs,
	libstetic/editor/ActionToolbar.cs, libstetic/undo/ActionDiffAdaptor.cs
	libstetic/editor/ActionGroupEditor.cs: Build with the latest gmcs.

2008-01-11  Marek Safar <marek.safar@gmail.com> 

	* libsteticui/ActionGroupToolbar.cs: Build with the latest gmcs.

2008-01-08  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs: Don't fire load events when loading a
	  widget. Fixes part of bug #352065.
	* libstetic/wrapper/Paned.cs: Fix bug in paned initialization. Fixes part of
	  bug #352065.
	* libstetic/editor/IconSelectorItem.cs: Added null check. Fixes some
	  crashes.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/Container.cs: Call base method when attaching/detaching
	  designer, since Object has some logic in those methods.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/ScrolledWindow.cs, libstetic/wrapper/objects.xml: Set
	  the correct default for ScrolledWindow.XscrollbarPolicy.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 
